--- a/Exercise 0-20201027/00e_introduction_to_python_tasks.ipynb
+++ b/Exercise 0-20201027/00e_introduction_to_python_tasks.ipynb
@@ -918,7 +918,7 @@
         "id": "2s5tprMEoU8L"
       },
       "source": [
-        "### Given a numpy array, return a new numpy array that contains only the elements that are greater than 100"
+        "### Given a numpy array, return a new numpy array that contains (only) the elements that are greater than 100"
       ]
     },
     {
