--- a/Exercise 0-20201027/00e_introduction_to_python_tasks.ipynb
+++ b/Exercise 0-20201027/00e_introduction_to_python_tasks.ipynb
@@ -47,10 +47,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "Tteoo3ZwoU4X",
-        "outputId": "887d1701-884f-4d14-af08-6c6ba7932884",
+        "outputId": "49665034-89fe-4f07-dcdc-c733f5b72fc7",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -85,27 +84,34 @@
       "cell_type": "code",
       "metadata": {
         "id": "s0iSK70xoU4s",
-        "outputId": "61f51e3f-2f85-4b15-ac09-c70989f00bac",
+        "outputId": "54455823-d445-4455-c36f-3869acd8292e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 34
         }
       },
       "source": [
-        "hello = \"Hello\"\n",
-        "world = \"World!\"\n",
-        "print(hello + world)\n",
-        "print(hello + \" \" + world)"
+        "hello = 'Hello'\n",
+        "world = 'World!'\n",
+        "helloworld = hello + world\n",
+        "helloworld"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "HelloWorld!\n",
-            "Hello World!\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'HelloWorld!'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
         }
       ]
     },
@@ -121,14 +127,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PnvghmnAoU46"
+        "id": "PnvghmnAoU46",
+        "outputId": "1604ff20-cf04-4803-a34d-d9bc30721f7f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "l = [\"alpha\", \"beta\", \"gamma\", \"delta\"]\n",
-        "l.append(\"epsilon\")"
+        "l = ['alpha', 'beta', 'gamma', 'delta']\n",
+        "l.append('epsilon')\n",
+        "l"
       ],
-      "execution_count": 4,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['alpha', 'beta', 'gamma', 'delta', 'epsilon']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -143,17 +167,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "ALk8XtMnoU5F",
-        "outputId": "45bc219b-2fdc-48bc-fb8f-e202a1a68eac",
+        "outputId": "417d38c2-38cd-4e1d-95ae-bb0d8b0063ff",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "l2 = l[:3]\n",
         "l2"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -165,7 +188,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -201,17 +224,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "sd1CDErwoU5c",
-        "outputId": "4bec4b8f-59eb-4439-dcf6-e378c68f16ac",
+        "outputId": "305b003f-66dd-4f61-ee62-9297e6d6e410",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 173
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "for i in list(range(1,6)) + list(range(4,0,-1)):\n",
         "  print(i*\"*\")"
       ],
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,14 +264,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "W8POnLsPoU5k"
+        "id": "W8POnLsPoU5k",
+        "outputId": "10b5f5c1-59b5-4ece-b3cb-4e39d69ce107",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "def prod(a,b,x):\n",
-        "  return a*b*c"
+        "def prod(*a):\n",
+        "  r = 1\n",
+        "  for e in a:\n",
+        "      r *= e\n",
+        "  return r\n",
+        "\n",
+        "prod(12,3)"
       ],
-      "execution_count": 14,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "36"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -264,33 +308,33 @@
       "cell_type": "code",
       "metadata": {
         "id": "kiRNEf3SoU5u",
-        "outputId": "a6a1b007-ac2a-4602-a882-5a3d571b786c",
+        "outputId": "fba5ee27-4fff-4bff-edc5-4fe635f48650",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "def is_prime(x):\n",
-        "  for k in range(2,x//(2+1)): # floor division\n",
-        "    if x % k == 0:\n",
+        "def is_prime(a):  \n",
+        "  for i in range(a//2, 1, -1):\n",
+        "    if (a%i==0):\n",
         "      return False\n",
-        "  return True\n",
-        "is_prime(10)"
+        "  return True \n",
+        "\n",
+        "is_prime(7)"
       ],
-      "execution_count": 25,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "False"
+              "True"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 16
         }
       ]
     },
@@ -307,63 +351,34 @@
       "cell_type": "code",
       "metadata": {
         "id": "d1pA4UNDoU54",
-        "outputId": "ae6884b8-194f-4584-9d26-4d7a434776c0",
+        "outputId": "c6ac0780-6109-48e6-8e34-b5cceb38126b",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 521
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "def primes_up_to(y):\n",
+        "def primes_up_to(x):\n",
         "  r = []\n",
-        "  for x in range(2,y+1):\n",
-        "    if is_prime(x):\n",
-        "      r.append(x)\n",
+        "  for i in range(2,x+1):\n",
+        "    if is_prime(i):\n",
+        "      r.append(i)\n",
         "  return r\n",
         "\n",
-        "primes_up_to(100)"
+        "primes_up_to(30)"
       ],
-      "execution_count": 31,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[2,\n",
-              " 3,\n",
-              " 4,\n",
-              " 5,\n",
-              " 6,\n",
-              " 7,\n",
-              " 8,\n",
-              " 9,\n",
-              " 11,\n",
-              " 13,\n",
-              " 17,\n",
-              " 19,\n",
-              " 23,\n",
-              " 29,\n",
-              " 31,\n",
-              " 37,\n",
-              " 41,\n",
-              " 43,\n",
-              " 47,\n",
-              " 53,\n",
-              " 59,\n",
-              " 61,\n",
-              " 67,\n",
-              " 71,\n",
-              " 73,\n",
-              " 79,\n",
-              " 83,\n",
-              " 89,\n",
-              " 97]"
+              "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 17
         }
       ]
     },
@@ -402,7 +417,7 @@
         "\n",
         "roll(1000000)\n"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -460,7 +475,7 @@
         "\n",
         "add_dictionaries(d1, d2)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -499,7 +514,7 @@
         "test_l = [[1,2,3],[\"a\", \"b\"], [123.5, \"a\", 44]]\n",
         "[len(t) for t in test_l]"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -554,7 +569,7 @@
         "print(divide(20,0))\n",
         "print(divide1(20,0))"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,7 +605,7 @@
         "      result.append(line.count(letter))\n",
         "    return result"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -645,7 +660,7 @@
         "      result.append(new_options)\n",
         "    return result"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -668,7 +683,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -694,7 +709,7 @@
         "x = np.zeros((20,10))\n",
         "x"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -751,7 +766,7 @@
       "source": [
         "np.arange(200).reshape(20,10)"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -809,7 +824,7 @@
         "x = np.random.randint(5, size=(2,2,2,2))\n",
         "x"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -858,7 +873,7 @@
       "source": [
         "x.mean()"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -896,7 +911,7 @@
       "source": [
         "x[:,1,1,1]"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -935,7 +950,7 @@
         "x = np.array([120,-5,150,250,300,50,112])\n",
         "x[x > 100]"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
